bugfix - openjdk compatibility with String::isBlank, MouseEvent.isAltDown when middle mouse pressed